--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -1,6 +1,6 @@
 .header{
     background-color: #afafaf;
-    position: fixed;
+    position: sticky;
     width: 100%;
     box-sizing: border-box;
     justify-content: center;
